--- a/include/header_admin.html
+++ b/include/header_admin.html
@@ -40,16 +40,16 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/admin/set_schedule.php">Составить расписание</a>
+                                <a href="/admin/set_schedule.php">Добавить занятие</a>
                             </li>
                             <li>
                                 <a href="../admin/view_students.php">Студенты</a>
                             </li>
                             <li>
-                                <a href="#">Еще одна функция админа</a>
+                                <a href="../registration.php">Зарегистрировать преподавателя</a>
                             </li>
                             <li>
-                                <a href="#">Еще одна функция админа</a>
+                                <a href="../">Еще одна функция админа</a>
                             </li>
                             <li>
                                 <a href="#">Еще одна функция админа</a>
