--- a/include/footer_admin.html
+++ b/include/footer_admin.html
@@ -2,7 +2,7 @@
 <script>
     $(function () {
         $('#datetimepicker1').datetimepicker({
-            format : 'YYYY-MM-DD HH:mm:00'
+            format : 'YYYY-MM-DD HH:mm:00',
         });
     });
 </script>
