--- a/include/header_teacher.html
+++ b/include/header_teacher.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -6,10 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кружок программирования искусственного интеллекта</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">
 
 
 </head>
@@ -27,7 +35,7 @@
                          role="navigation">
                         <ul class="nav sidebar-nav">
                             <li class="sidebar-brand">
-                                <a href="homepage.php">
+                                <a href="#">
                                     Меню
                                 </a>
                             </li>
@@ -35,16 +43,16 @@
                                 <a href="homepage.php">Расписание занятий</a>
                             </li>
                             <li>
+                                <a href="set_schedule.php">Добавить занятие</a>
+                            </li>
+                            <li>
                                 <a href="profile.php">Мой профиль</a>
                             </li>
                             <li>
-                                <a href="attendance.php">Посещаемость</a>
+                                <a href="#">Еще одна функция преподавателя</a>
                             </li>
                             <li>
-                                <a href="#">Моя группа?</a>
-                            </li>
-                            <li>
-                                <a href="#">Мероприятия?</a>
+                                <a href="#">Еще одна функция преподавателя</a>
                             </li>
                             <li>
                                 <a href="/include/sign_out.php">Выйти</a>
