--- a/style/style.css
+++ b/style/style.css
@@ -406,19 +406,19 @@ table {
 }
 
 th {
-    background: #AFCDE7;
-    color: white;
+    background: #7f8be7;
+    color: #ffd890;
     padding: 10px 20px;
 }
 
 th, td {
     border-style: solid;
     border-width: 0 1px 1px 0;
-    border-color: white;
+    border-color: #bfb093;
 }
 
 td {
-    background: #D8E6F3;
+    background: #7f8be7;
 }
 
 th:first-child, td:first-child {
@@ -432,6 +432,7 @@ table.table-3 {
     border-spacing: 0;
     width: 100%;
 }
+
 table.table-3 tr {
     background-color: #f8f8f8;
 }
@@ -442,11 +443,11 @@ table.table-3 td {
     padding: 8px;
     border: 1px solid #ddd;
 }
+
 @media screen and (max-width: 600px) {
     table.table-3 {
         border: 0;
     }
-
 
 
     table.table-3 thead {
@@ -481,4 +482,8 @@ table.table-3 td {
     table.table-3 td:last-child {
         border-bottom: 0;
     }
+}
+
+.link {
+    color: #f6faff;
 }
