сменил кнопку посещаемость на достижения

--- a/include/header.html
+++ b/include/header.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -37,7 +38,7 @@
                                 <a href="profile.php">Мой профиль</a>
                             </li>
                             <li>
-                                <a href="achievements.html">Посещаемость?</a>
+                                <a href="attendance.php">Мои достижения</a>
                             </li>
                             <li>
                                 <a href="#">Моя группа?</a>
