обновил ссылку на страницу достижений

--- a/include/header.html
+++ b/include/header.html
@@ -38,7 +38,7 @@
                                 <a href="profile.php">Мой профиль</a>
                             </li>
                             <li>
-                                <a href="attendance.php">Мои достижения</a>
+                                <a href="achievement.php">Мои достижения</a>
                             </li>
                             <li>
                                 <a href="#">Моя группа?</a>
